<resources>
    <string name="app_name">FigmaDatabaseApi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
̉̉̉    <string name="log_in">Log in</string>
    <string name="or_connect_via">Or connect via</string>
    <string name="terms_policy">By logging, you are agreeing with our Terms of Use and Privacy Policy</string>
    <string name="register1">Don’t have an account? Register</string>
    <string name="password">Password</string>
    <string name="create_account">Create account</string>
    <string name="register_to_get_started">Register to get started.</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="terms_of_use_and_privacy_policy">By registering, you are agreeing with our Terms of Use and Privacy Policy</string>
    <string name="already_have_an_account_log_in">Already have an account? Log in</string>
    <string name="register_">Register</string>
    <string name="this_is_terms_of_use_and_privacy_policy_page">This is Terms of use And Privacy policy Page.</string>
    <string name="change_your_password_here">Change your Password here.</string>
    <string name="marketing_data">Marketing Data</string>
    <string name="btn_delete">btn_delete</string>
    <string name="delete">Delete</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="enter_your_credentials_to_continue">Enter your credentials to continue.</string>
    <string name="email_address">Email Address</string>
    <string name="all_user_data">All User Data</string>
    <string name="long_message">Hello Testing</string>
    <string name="decline">Cancel</string>
    <string name="accept">Accept</string>
</resources>